--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "clsx": "^2.0.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
+    "lucide-react": "^0.279.0",
     "next": "13.5.1",
     "postcss": "8.4.30",
+    "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwind-merge": "^1.14.0",
